--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <html>
     <head><title>Titulo</title></head>
     <link rel="stylesheet" href="css/estilos.css">
+   
     <body>
-        <h2>bien y tu</h2>
-        <p>que tal</p>        
+        <div id="contenedor">
+            <div id="Post">
+                <h2>Este es el titulo del post</h2>
+        <p>Este es el parrafo donde vamos a explicar las cosas 
+            increibles de las ramas
+        </p>        
+            </div>
+        </div>
+        
     </body>
 </html>
