--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    
     <body>
         <div id="contenedor">
+            <div id="cabecera">Cabecera</div>
             <div id="Post">
                 <h1>Este es el titulo del post</h1>
         <p>Este es el parrafo donde vamos a explicar las cosas 
