Final de la cabecera azul

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
    
     <body>
         <div id="contenedor">
-            <div id="cabecera">Cabecera</div>
+            <div id="cabecera">
+                Hiperblog <span id="tagline">Tu blog de confianza</span>
+            </div>
             <div id="Post">
                 <h1>Este es el titulo del post</h1>
         <p>Este es el parrafo donde vamos a explicar las cosas 
