--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         <p>Este es el parrafo donde vamos a explicar las cosas 
             increibles de las ramas
         </p>        
+        <p>
+            Los blog son la mejor forma de compartir informacion 
+            y tus ideas.
+            Mucho mas que ir a conferencias o salir en youtube. 
+            Excepto si eres un rocktasr. Pero estadisticamente no lo eres .....
+            por ahora.
+        </p>
             </div>
         </div>
         
