--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <div id="contenedor">
             <div id="cabecera">
-                Hiperblog <span id="tagline">Tu blog de confianza</span>
+                Hiperblog <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="Post">
                 <h1>Este es el titulo del post</h1>
