Agregue suscripcion, cambie cabecera maestra y puse todo azul

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <div id="contenedor">
             <div id="cabecera">
-                Hiperblog <span id="tagline">Tu blog de confianza</span>
+                Hiperblog <span id="tagline">Tu blog de maestro</span>
             </div>
             <div id="Post">
                 <h1>Este es el titulo del post</h1>
@@ -19,6 +19,7 @@
             Excepto si eres un rocktasr. Pero estadisticamente no lo eres .....
             por ahora.
         </p>
+        <p>Suscribete y dal like</p>
             </div>
         </div>
         
