Cambie el titulo
Porque puedo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <head><title>Titulo</title></head>
+    <head><title>Bienvenido a hyperblog</title></head>
     <link rel="stylesheet" href="css/estilos.css">
    
     <body>
