Una version de el hyperblog

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <head><title>Bienvenido a hyperblog</title></head>
+    <head><title>Bienvenido a hyperblog 2.0</title></head>
     <link rel="stylesheet" href="css/estilos.css">
    
     <body>
