color de fondo logo nuevo, mejor color de header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <body>
         <div id="contenedor">
             <div id="cabecera">
+                <img id="logo" src="imagenes/img.png">
                 Hiperblog <span id="tagline">Tu blog de maestro</span>
             </div>
             <div id="Post">
