--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
                 <h1>Este es el titulo del post</h1>
         <p>Este es el parrafo donde vamos a explicar las cosas 
             increibles de las ramas
-        </p>        
+        </p> 
+        <p><img src="imagenes/imgoo.jpg" alt="10%"></p>       
         <p>
             Los blog son la mejor forma de compartir informacion 
             y tus ideas.
